---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: 1/6/25
  Features:
    - Added many more quests and rewards.
    - Added button in catalog to open the item in the Factoriopedia.
  Changes:
    - Sentient Spider is now equipped with 1x [item=teslagun] instead of 4x [item=rocket-launcher].
    - Sentient Spider now has a larger equipment grid.
    - Trades can now only be made with researched qualities.
    - Changed silver rank bonus to guarantee at least one interplanetary trade for every item on every planet.
    - Clicking on an item in a trade when viewed in a hex core now opens up that item in the catalog instead of the Factoriopedia.
  Gui:
    - Changed the sink and generator mode icons.
    - Changed the red star rank bonus description.
    - Removed the line that separated quest conditions and rewards from the labels.
    - Added images to all quests.
    - Changed the style of total bought/sold statistics in hex core GUIs.
    - Changed the teleport button sprite.
  Bugfixes:
    - Fixed the factoriopedia simulation for hexaprisms and hexic underground belts.
    - Added localization for the crystalline fuel tech.
    - Fixed fish spawning.
    - Removed [item=cliff-explosives] from all planets except [planet=vulcanus].
    - Fixed that concrete was removing egg rafts and stromatolites on [planet=gleba].
    - Fixed that the selling part of ranking up an item to gold stars didn't count.
    - Fixed that sink mode trade conversion was skipping some items randomly.
    - Fixed belt capacity tech.
    - Fixed that modded surfaces would crash the game.
    - Fixed total bought/sold statistics in hex core GUIs.
    - Fixed that the questbook was changing sizes as quests were selected.
  Balancing:
    - Supercharging is now unlocked on [planet=vulcanus].
    - Quality trades now have a trade productivity decrement based on the tier of quality, e.g. an uncommon trade loses 35% productivity.