@@ -412,6 +412,7 @@ cannot-teleport-to-unclaimed=You cannot teleport to an unclaimed hex core.
 cannot-teleport-to-other-planets=You cannot teleport a hex core on a different planet from the one you're on.
 no-item-in-hand=You have no item in your hand.
 item-rank-too-low=That item is not a high enough rank for this.
+current-hex-pool-size=Current hex pool size: __1__
 
 [command-help]
 hextorio-commands=List all commands added by Hextorio.
